--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,32 @@
+certifi==2020.6.20
+charset-normalizer==2.0.12
+docopt==0.6.2
+idna==3.3
+interchange==2021.0.4
 jieba==0.42.1
 joblib==1.1.0
 lxml==4.8.0
+monotonic==1.6
 numpy==1.16.6
-Pillow==9.0.1
+packaging==21.3
+pandas==1.1.5
+pansi==2020.7.3
+pillow==8.4.0
+pip==21.2.2
+pipreqs==0.4.11
 py2neo==2021.2.3
+pygments==2.11.2
+pyparsing==3.0.7
+python-dateutil==2.8.2
+pytz==2022.1
 requests==2.27.1
-scikit_learn==1.0.2
+scikit-learn==0.24.2
+scipy==1.5.4
+setuptools==58.0.4
+six==1.16.0
+sklearn==0.0
+threadpoolctl==3.1.0
+urllib3==1.26.9
+wheel==0.37.1
+wincertstore==0.2
+yarg==0.1.9
